# project-mycelium

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAQ.md  LICENSE.md  NOTICE.md  PERFORMANCE.md  PRESENTER.md  README.md  SECURITY.md  deliverables.txt  docker-compose.yml  netlify.toml  package.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy-static.yml
ci/: ci.yml  deploy-static.yml
deploy/: netlify.toml  vercel.json
docs/: ARCHITECTURE.md  DESIGN.md  validate_docs.py
examples/: cids.json
github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
github/workflows/: ci.yml  deploy-static.yml
scripts/: export_demo.py  generate_license_headers.py  seed_demo_data.py  verify_demo.sh
src/backend/mycelium/: __init__.py  chunking.py  config.py  database.py  main.py  models.py  routes.py  schemas.py  services.py
src/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  api.ts  demoData.ts  hooks.ts  index.css  main.tsx  types.ts
tests/backend/: __init__.py  test_chunking.py  test_config.py  test_models.py  test_schemas.py  test_services.py
tests/backend/deepseek_adapter/: __init__.py  test_config.py  test_detect.py  test_integration.py  test_loader.py  test_utils.py  test_verify.py
tests/frontend/: ai.test.ts  crdt.test.ts  demoData.test.ts  p2p.test.ts
(+27 files in other folders)
