# Project Mycelium — Pyproject
# Copyright (c) 2026 Zorvia Community

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium"
version = "1.0.0"
description = "Project Mycelium — Nurturing Knowledge Without the Cloud"
readme = "README.md"
license = {text = "ZPL-2.0"}
requires-python = ">=3.11"
authors = [
  {name = "Zorvia Community", email = "community@zorvia.org"},
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.6.0",
  "aiosqlite>=0.20.0",
  "cryptography>=42.0.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
  "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["src/backend"]
